fix drag and drop issue, align layout.

--- a/LaserConvertClient/Pages/Home.razor.css
+++ b/LaserConvertClient/Pages/Home.razor.css
@@ -73,6 +73,8 @@
     height: 100%;
     opacity: 0;
     cursor: pointer;
+    top: 0;
+    left: 0;
 }
 
 .drop-zone-content {
